# nix-cmake-test

project-a/: .gitignore  CMakeLists.txt  default.nix  derivation.nix
project-a/cmake/: config.cmake.in
project-a/include/libtest_a/: foo.hpp
project-a/src/: foo.cpp
project-b/: CMakeLists.txt  default.nix  derivation.nix
project-b/src/: foo.cpp
